# MUSIC_in_OFDM_ISAC

./: .gitignore  PLANNED_FIXES.md  PROJECT_CHECKLIST.md  PROJECT_REMEDIATION_PLAN.md  README.md  generate_figures.py  pyproject.toml  requirements.txt  run_study.py
figure_scripts/: 01_motivation_1d_range.py  02_nominal_scene_verdict.py  03_nominal_trial_delta.py  04_scene_coherence_overlap.py  05_regime_map.py  06_rack_aisle_failure_diagnostic.py  07_nominal_resource_mask.py  08_representative_intersection_case.py  09_model_order_nominal_comparison.py  10_expected_order_nuisance_sweep.py  11_nominal_runtime_comparison.py  12_masked_observation_equation.py  13_music_pseudospectrum_equation.py  common.py  run_all_figures.sh
figures/: README.md
presentation/: __init__.py  build_deck.py  builder.mjs  claim_map.py  deck_spec.py  figures.py  node_modules  sources.py
report/: current_assessment.tex
scripts/: build_results_bundle.sh  build_signal_model_math.sh  build_submission_bundle.sh  flowchart.py  generate_1d_motivation_figure.py  kill_project_runs.sh  plot_results_from_csv.py  run_model_order_comparison_64trials.py  run_staged_submission.py  signal_model_math.tex
src/aisle_isac/: __init__.py  allocation_metrics.py  channel_models.py  config.py  estimators.py  estimators_fft_masked.py  estimators_music.py  masked_observation.py  metrics.py  modulation.py  ofdm.py  reporting.py  resource_grid.py  scenarios.py  study.py  (+2 more)
tests/: test_bundle_scripts.py  test_channel_models.py  test_masked_fft.py  test_metrics.py  test_resource_grid.py  test_scheduled_study.py
