[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisle-isac"
version = "0.1.0"
description = "MUSIC super-resolution in OFDM ISAC: angle-range-Doppler sensing under private-5G waveform constraints"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
