[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aisle-isac"
version = "0.1.0"
description = "Communications-scheduled OFDM ISAC super-resolution on irregular resource grids"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["figure_scripts"]
